--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Fellows</a>
                 </li>
-                <div class="vertical d-none d-lg-block"></div>
+            </ul>
+            <div class="vertical d-none d-lg-block"></div>
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
