--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="card-img-overlay">
                         <div id="div2" style="display: none">
                             <div class="block_reward">
-                                <h5 class="reward_text card-title">Reward<br />
+                                <h5 class="reward_text card-title">Reward<br/>
                                     <span class="gold">1000</span> golden coins</h5>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                     <div class="card-img-overlay">
                         <div id="div5" style="display: none">
                             <div class="block_reward">
-                                <h5 class="reward_text card-title">Reward<br />
+                                <h5 class="reward_text card-title">Reward<br/>
                                     <span class="gold">800</span> golden coins</h5>
                             </div>
                         </div>
@@ -167,14 +167,14 @@
                                 <input type="email" class="form-control" placeholder="@">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="&#8962;">
+                                <input type="text" class="form-control" placeholder="Address">
                             </div>
                             <div class="form-group">
                                 <select class="form-control select">
-                            <option>I have seen one of them</option>
-                            <option>...</option>
-                            <option>...</option>
-                        </select>
+                                        <option>I have seen one of them</option>
+                                        <option>...</option>
+                                        <option>...</option>
+                                    </select>
                             </div>
                             <div class="form-group">
                                 <textarea class="form-control" rows="7" placeholder="Your message"></textarea>
@@ -239,22 +239,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script type="text/javascript">
-        $("#div1").mouseenter(function() {
-            $("#div2").show();
-            $("#div3").hide();
-        }).mouseleave(function() {
-            $("#div2").hide();
-            $("#div3").show();
-        });
-        $("#div4").mouseenter(function() {
-            $("#div5").show();
-            $("#div6").hide();
-        }).mouseleave(function() {
-            $("#div5").hide();
-            $("#div6").show();
-        });
-    </script>
+    <script type="text/javascript" src="app.js"></script>
 
 </body>
 
